--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -155,18 +155,18 @@
       "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Bullying/Denpa/Female Protagonist/Aliens/Shounen\nA Happy alien, Takopi, lands on Earth with one mission: to spread happiness! When he meets Shizuka, a lonely fourth grader, he vows to bring back her smile using his magical Happy Gadgets. But as he uncovers the pain in her life, Takopi learns that true happiness may require more than gadgets.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt32811739",
-      "type": "series",
-      "name": "Reborn as a Vending Machine, I Now Wander the Dungeon Season 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169440-MhlOxaIyASRu.jpg",
-      "description": "Genres: Adventure, Comedy, Fantasy\nTags:Language Barrier/Isekai/Food/Magic/Dungeon/Parody/Male Protagonist/Economics/Martial Arts\nThe second season of <i>Jidou Hanbaiki ni Umarekawatta Ore wa Meikyuu wo Samayou.</i>"
-    },
-    {
       "id": "tt32731400",
       "type": "series",
       "name": "Apocalypse Bringer Mynoghra: World Conquest Starts with the Civilization of Ruin",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178433-8KzNsjTmdAvw.jpg",
       "description": "Genres: Action, Adventure, Comedy, Drama, Fantasy, Romance\nTags:Isekai/Virtual World/Elf\nTakuto Ira succumbed to illness at a young age and ended up reincarnating in a world that resembles the fantasy turn-based strategy game Eternal Nations. Not only did he reincarnate into his favorite game, but as the god who commands the evil civilization Mynoghra. With Mynoghra's beautiful hero unit, Sludge Witch Atou by his side, not even legendarily difficult race traits will stand in the way of restarting their civilization! “Lord Takuto…won't you start over with me?” Explore, Expand, Exploit, Exterminate! A tactical fantasy world is waiting for heroes like you! Join Eternal Nations today!\n<br><br>\n(Source: Cross Infinite World)"
+    },
+    {
+      "id": "tt32811739",
+      "type": "series",
+      "name": "Reborn as a Vending Machine, I Now Wander the Dungeon Season 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169440-MhlOxaIyASRu.jpg",
+      "description": "Genres: Adventure, Comedy, Fantasy\nTags:Language Barrier/Isekai/Food/Magic/Dungeon/Parody/Male Protagonist/Economics/Martial Arts\nThe second season of <i>Jidou Hanbaiki ni Umarekawatta Ore wa Meikyuu wo Samayou.</i>"
     },
     {
       "id": "tt33050376",
@@ -299,7 +299,7 @@
       "type": "series",
       "name": "Private Tutor to the Duke's Daughter",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170113-fq1NyxPRvLKc.jpg",
-      "description": "Genres: Drama, Fantasy, Romance\nTags:Magic/Female Harem/Male Protagonist\nAfter Allen failed the court sorcerer exam, he couldn’t return home even if he wanted to. While searching for a job, an unexpected offer comes his way to be the private tutor of the duke’s daughter. Just as he lowers his guard, he faces a girl who can’t use magic at all! But what is preventing her magic from working? Allen’s unconventional lessons gently shine a light on the girl’s future.<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Drama, Fantasy, Romance\nTags:Magic/Female Harem/Male Protagonist\nAfter Allen failed the court sorcerer exam, he couldn’t return home even if he wanted to. While searching for a job, an unexpected offer comes his way to be the private tutor of the duke’s daughter. Just as he lowers his guard, he faces a girl who can’t use magic at all! But what is preventing her magic from working? Allen’s unconventional lessons gently shine a light on the girl’s future.<br>\n<br>\n(Source: Crunchyroll)<br><br>\n<i>Note: Each episode streamed 1 week early on ABEMA and dAnimeStore. The original TV broadcast started on July 6, 2025.</i>"
     },
     {
       "id": "tt36074011",
@@ -323,18 +323,18 @@
       "description": "Genres: Adventure, Comedy, Fantasy, Slice of Life\nTags:Food/Restaurant\nWhen superstar adventurer Dennis gets booted from the world’s strongest party, he teams up with runaway Atelier to serve up his true passion—delicious cuisine. But this not-so-average eatery has not-so-average patrons. Dennis will battle his quirky customers’ troubles with his trusty butcher knife and wok. Visit Adventurer’s Restaurant and fill up your heart and stomach!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt37205655",
-      "type": "series",
-      "name": "Nukitashi THE ANIMATION",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174188-fZg8iePD9Dca.jpg",
-      "description": "Genres: Action, Comedy, Drama, Ecchi, Romance\nTags:Coastal/Primarily Teen Cast/Male Protagonist/Nudity/School/Primarily Female Cast\nThe island of the everlasting summer, Seiran Island.\n<br><br>\nJunnosuke Tachibana, who was born on this island, returns with his younger sister, Asane Tachibana, after the death of their parents.\n<br><br>\nHowever, Seiran Island has become a place of madness due to the implementation of the “Perverted Law,” a law designed to combat population decline. This law permits and even encourages lewd sex acts everywhere on the island, and refusing to engage in “reproductive activities” is punished almost as severely as a crime.\n<br><br>\nJunnosuke, a proud virgin and staunch defender of virginity, questions the legitimacy of this law. Determined to protect both his and his beloved sister’s purity, he forms the anti-copulation front NLNS (No Love No Sex) and sets out to destroy the Perveted Law once and for all.\n<br><br>\n“I’ll… destroy the Perverted Law!”\n<br><br>\n(Source: Official Site, translated)"
-    },
-    {
       "id": "tt35677101",
       "type": "series",
       "name": "The Shy Hero and the Assassin Princesses",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186561-svLOWbfahG5V.png",
       "description": "Genres: Action, Comedy, Fantasy\nTags:Female Harem/Medieval\nHero Toto possesses great skills, but his extreme shyness has left him unable to form a party, causing him to remain stuck in the town where his journey began.\n<br><br>\nOne day, he is suddenly invited to join a party by three beautiful women—Ciel, Anemone, and Gore. Overjoyed at finally setting off on an adventure, Toto is filled with excitement... but little does he know, these women are dead set on killing him!\n<br><br>\nA deathly harem romcom unfolds as the socially anxious hero, who faints from mere flustered excitement around women, finds himself the target of three deadly companions, each with their own reasons for wanting him gone!\n<br><br>\n<i>Note: Each episode streamed 1 week early on ABEMA. The original TV broadcast started on July 12th 2025.<i>"
+    },
+    {
+      "id": "tt37205655",
+      "type": "series",
+      "name": "Nukitashi THE ANIMATION",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174188-fZg8iePD9Dca.jpg",
+      "description": "Genres: Action, Comedy, Drama, Ecchi, Romance\nTags:Coastal/Primarily Teen Cast/Male Protagonist/Nudity/School/Primarily Female Cast\nThe island of the everlasting summer, Seiran Island.\n<br><br>\nJunnosuke Tachibana, who was born on this island, returns with his younger sister, Asane Tachibana, after the death of their parents.\n<br><br>\nHowever, Seiran Island has become a place of madness due to the implementation of the “Perverted Law,” a law designed to combat population decline. This law permits and even encourages lewd sex acts everywhere on the island, and refusing to engage in “reproductive activities” is punished almost as severely as a crime.\n<br><br>\nJunnosuke, a proud virgin and staunch defender of virginity, questions the legitimacy of this law. Determined to protect both his and his beloved sister’s purity, he forms the anti-copulation front NLNS (No Love No Sex) and sets out to destroy the Perveted Law once and for all.\n<br><br>\n“I’ll… destroy the Perverted Law!”\n<br><br>\n(Source: Official Site, translated)"
     },
     {
       "id": "tt35995459",
@@ -344,7 +344,7 @@
       "description": "Genres: Action, Drama\nTags:Inn/Assassins/Female Protagonist/Male Protagonist\nThe best hotels must meet certain standards, including the finest cuisine, ways to relax, and entertainment. Of course, they also need the best selection of weapons, reliable ways to falsify one’s identity, and ways to dispose of evidence. In this hotel at the border of death stand two concierges, Ikuro Hoshi and Sara Haizaki. What kinds of requests will the assassins have for them next?\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt35014218",
+      "id": "tt37419888",
       "type": "series",
       "name": "Hitozuma no Kuchibiru wa Kan Chu-Hi no Aji ga Shite",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186789-40kriALlmxYQ.jpg",
