--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -18,7 +18,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt30472557"
       },
-      "description": "Genres: Action, Drama, Supernatural\nTags:Demons/Monster Boy/Male Protagonist/Urban Fantasy/Body Horror/Gore/Anti-Hero/Urban/Shounen/Heterosexual/Henshin\nTheatrical follow-up to <i>Chainsaw Man</i>.<br><br>\nDenji became “Chainsaw Man”, a boy with a devil’s heart, and is now part of Special Division 4’s devil hunters. After a date with Makima, the woman of his dreams, Denji takes shelter from the rain. There he meets Reze, a girl who works in a café.<br><br>\n\n(Source: MAPPA CHANNEL)\n\n"
+      "description": "Genres: Action, Drama, Supernatural\nTags:Demons/Monster Boy/Male Protagonist/Urban Fantasy/Gore/Body Horror/Urban/Anti-Hero/Shounen/Heterosexual/Henshin\nTheatrical follow-up to <i>Chainsaw Man</i>.<br><br>\nDenji became “Chainsaw Man”, a boy with a devil’s heart, and is now part of Special Division 4’s devil hunters. After a date with Makima, the woman of his dreams, Denji takes shelter from the rain. There he meets Reze, a girl who works in a café.<br><br>\n\n(Source: MAPPA CHANNEL)\n\n"
     },
     {
       "id": "tt32600395",
@@ -28,7 +28,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt32600395"
       },
-      "description": "Genres: Drama, Sports\nTags:Coming of Age/Rotoscoping/Athletics/Shounen/Outdoor Activities/Fitness/Male Protagonist\n<i>100 METERS</i> follows Togashi, a track star who is born to run. As a kid, he is naturally gifted and wins every 100-meter race without effort. But in sixth grade, he meets Komiya, a transfer student who is full of determination but lacks technique. In teaching him, Togashi gives Komiya a new purpose: to win no matter what. Years pass by, and Togashi and Komiya meet again as rivals on the track and reveal their true selves.\n<br><br>\n(Source: GKIDS)"
+      "description": "Genres: Drama, Sports\nTags:Rotoscoping/Athletics/Coming of Age/Outdoor Activities/Fitness/Male Protagonist/Shounen\n<i>100 METERS</i> follows Togashi, a track star who is born to run. As a kid, he is naturally gifted and wins every 100-meter race without effort. But in sixth grade, he meets Komiya, a transfer student who is full of determination but lacks technique. In teaching him, Togashi gives Komiya a new purpose: to win no matter what. Years pass by, and Togashi and Komiya meet again as rivals on the track and reveal their true selves.\n<br><br>\n(Source: GKIDS)"
     },
     {
       "id": "tt34881132",
@@ -98,17 +98,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt36270843"
       },
-      "description": "Genres: Music, Sports\nTags:Idol/Ice Skating/Primarily Male Cast/CGI\nThis time King of Prism is \"Prism☆Tours\"! Shin Ichijou and the other six members of SePTENTRION will travel across time and worlds in a time machine to the origins of Prism Shows. \n<br><br>\nIt will cross the boundaries of the series and intertwine with the worlds of the \"Pretty Rhythm\" series, \"PriPara\" series , \"Kiratto Pri☆Chan\", and \"Waccha PriMagi!\" to deliver a sparkling Prism☆Tours.\n<br><br>\nFated boy meets boy, our worlds are now connected by the prism's sparkle!\n<br><br>\n(Source: Official Website, translated)"
-    },
-    {
-      "id": "tt32881486",
-      "type": "movie",
-      "name": "JUNK WORLD",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx191370-w0h51nHzJ1Qo.png",
-      "behaviorHints": {
-        "defaultVideoId": "tt32881486"
-      },
-      "description": "Genres: Action, Adventure, Sci-Fi, Thriller\nTags:Philosophy/Stop Motion\nA prequel film to <i>Junk Head</i>."
+      "description": "Genres: Music, Sports\nTags:Idol/CGI/Primarily Male Cast/Ice Skating\nThis time King of Prism is \"Prism☆Tours\"! Shin Ichijou and the other six members of SePTENTRION will travel across time and worlds in a time machine to the origins of Prism Shows. \n<br><br>\nIt will cross the boundaries of the series and intertwine with the worlds of the \"Pretty Rhythm\" series, \"PriPara\" series , \"Kiratto Pri☆Chan\", and \"Waccha PriMagi!\" to deliver a sparkling Prism☆Tours.\n<br><br>\nFated boy meets boy, our worlds are now connected by the prism's sparkle!\n<br><br>\n(Source: Official Website, translated)"
     },
     {
       "id": "tt34807878",
