--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -99,18 +99,18 @@
       "description": "Genres: Action, Adventure, Fantasy, Slice of Life\nTags:Isekai/Male Protagonist/Magic/Medieval\nThe second season of <i>Tensei Shitara Dai Nana Ouji Dattanode, Kimamani Majutsu wo Kiwamemasu</i>.\n<br><br>\nThe magic maniac returns, his next target? Holy Magic.<br><br>\n(Source: Crunchyroll  Official Trailer)"
     },
     {
-      "id": "tt11448214",
-      "type": "series",
-      "name": "Rent-a-Girlfriend Season 4",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179344-bKIcCKDWDJdO.png",
-      "description": "Genres: Comedy, Romance\nTags:Male Protagonist/Heterosexual/Female Harem/Fake Relationship/Female Protagonist/Shounen/Unrequited Love/Primarily Adult Cast/Urban/Kaiju\nThe fourth season of <i> Kanojo, Okarishimasu</i>.<br><br>\nKazuya’s ready to confess with the lush paradise of Hawaii as a backdrop. But renting Chizuru for the dream trip turns into a war zone of love due to Ruka’s aggressive advances and Mami’s scheming. Despite the chaos, this is Kazuya’s moment to bare his heart. Will his words reach Chizuru? And if they do, what will she even say?\n<br><br>\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt32344704",
       "type": "series",
       "name": "Tougen Anki: Legend of the Cursed Blood",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177474-PaLG685VJsq5.jpg",
       "description": "Genres: Action, Mystery, Supernatural\nTags:Shounen/Male Protagonist/Demons/Guns/Urban Fantasy/Revenge/Shapeshifting/CGI\nThe bloodlines of “Oni” and “Momotarou” have been passed down among certain humans for generations.<br>\n<br>\nLong ago, the Oni, aware of their own ferocity, lived in seclusion. However, their peace was shattered by an invasion led by Momotarou.\nOver thousands of years, these two factions formed the “Momotarou Agency” and the “Oni Agency,” respectively, and have been locked in conflict ever since.<br>\n<br>\nThe protagonist, Shiki Ichinose, suddenly learns of his Oni lineage following an unexpected attack by Momotarou. This revelation sets Shiki on a path to discover the destiny that lies within his blood — a meeting with the Oni dwelling within him.<br>\n<br>\n—A new generation of dark heroics begins here in this tale of demons!\n<br>\n<br>\n(Source: Official Site)"
+    },
+    {
+      "id": "tt11448214",
+      "type": "series",
+      "name": "Rent-a-Girlfriend Season 4",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179344-bKIcCKDWDJdO.png",
+      "description": "Genres: Comedy, Romance\nTags:Male Protagonist/Heterosexual/Female Harem/Fake Relationship/Female Protagonist/Shounen/Unrequited Love/Primarily Adult Cast/Urban/Kaiju\nThe fourth season of <i> Kanojo, Okarishimasu</i>.<br><br>\nKazuya’s ready to confess with the lush paradise of Hawaii as a backdrop. But renting Chizuru for the dream trip turns into a war zone of love due to Ruka’s aggressive advances and Mami’s scheming. Despite the chaos, this is Kazuya’s moment to bare his heart. Will his words reach Chizuru? And if they do, what will she even say?\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt33472011",
@@ -152,7 +152,7 @@
       "type": "series",
       "name": "Takopi's Original Sin",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185407-K8o5pta80AU0.jpg",
-      "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Bullying/Denpa/Female Protagonist/Aliens/Shounen\nA Happy alien, Takopi, lands on Earth with one mission: to spread happiness! When he meets Shizuka, a lonely fourth grader, he vows to bring back her smile using his magical Happy Gadgets. But as he uncovers the pain in her life, Takopi learns that true happiness may require more than gadgets.\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Denpa/Bullying/Aliens/Female Protagonist/Shounen\nA Happy alien, Takopi, lands on Earth with one mission: to spread happiness! When he meets Shizuka, a lonely fourth grader, he vows to bring back her smile using his magical Happy Gadgets. But as he uncovers the pain in her life, Takopi learns that true happiness may require more than gadgets.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32731400",
@@ -313,7 +313,7 @@
       "type": "series",
       "name": "BULLET/BULLET",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx157960-IrnEWE1pvoT3.jpg",
-      "description": "Genres: \nTags:Cars\nA team of thieves find themselves in a world of trouble after completing their latest job."
+      "description": "Genres: \nTags:Cars\nIn the near future, civilization has collapsed, and the world has become a wasteland. Despite their poverty, the people use remnants of past civilizations to lead resilient lives. Gear works in a junk shop while also retrieving stolen goods alongside Qu-0213, a robot with four personalities, and White Bear, a gambler. One day, Gear finds himself thrust into a once-in-a-lifetime job to steal an important item. They soon find themselves up against deadly assassins, heart- pounding car chases, and explosive battles. What Gear and his team do not know yet is that the item they stole holds a secret that could shake the very foundation of this world.\n<br><br>\n(Source: Disney+)"
     },
     {
       "id": "tt30057076",
@@ -334,7 +334,7 @@
       "type": "series",
       "name": "Nukitashi THE ANIMATION",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174188-fZg8iePD9Dca.jpg",
-      "description": "Genres: Action, Comedy, Drama, Ecchi, Romance\nTags:Coastal/Primarily Teen Cast/Male Protagonist/Nudity/School/Primarily Female Cast\nThe island of the everlasting summer, Seiran Island.\n<br><br>\nJunnosuke Tachibana, who was born on this island, returns with his younger sister, Asane Tachibana, after the death of their parents.\n<br><br>\nHowever, Seiran Island has become a place of madness due to the implementation of the “Perverted Law,” a law designed to combat population decline. This law permits and even encourages lewd sex acts everywhere on the island, and refusing to engage in “reproductive activities” is punished almost as severely as a crime.\n<br><br>\nJunnosuke, a proud virgin and staunch defender of virginity, questions the legitimacy of this law. Determined to protect both his and his beloved sister’s purity, he forms the anti-copulation front NLNS (No Love No Sex) and sets out to destroy the Perveted Law once and for all.\n<br><br>\n“I’ll… destroy the Perverted Law!”\n<br><br>\n(Source: Official Site, translated)"
+      "description": "Genres: Action, Comedy, Drama, Ecchi, Romance\nTags:Nudity/Coastal/Primarily Teen Cast/Male Protagonist/School/Primarily Female Cast\nThe island of the everlasting summer, Seiran Island.\n<br><br>\n\"Junnosuke Tachibana, whose family home was on this island, returned to it with his sister, Asane Tachibana, after the death of their parents.\"\n<br><br>\nHowever, Seiran Island has become a place of madness due to the implementation of the “Perverted Law,” a law designed to combat population decline. This law permits and even encourages lewd sex acts everywhere on the island, and refusing to engage in “reproductive activities” is punished almost as severely as a crime.\n<br><br>\nJunnosuke, a proud virgin and staunch defender of virginity, questions the legitimacy of this law. Determined to protect both his and his beloved sister’s purity, he forms the anti-copulation front NLNS (No Love No Sex) and sets out to destroy the Perveted Law once and for all.\n<br><br>\n“I’ll… destroy the Perverted Law!”\n<br><br>\n(Source: Official Site, translated)\n<br><br>\n<i>Note: Prior to the TV broadcast, a special pre-release screening titled “Nukitashi THE ANIMATION – Seiranjima Special ver. Pre-release Screening Event” was held on June 22, 2025 at Cinem@rt Shinjuku in Tokyo. It featured episodes 1-3.</i>"
     },
     {
       "id": "tt35995459",
