--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -19,14 +19,14 @@
       "type": "series",
       "name": "Kaiju No. 8 Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178754-xQEHrJS6sKAA.jpg",
-      "description": "Genres: Action, Sci-Fi\nTags:Kaiju/Monster Boy/Shounen/Male Protagonist/Military/Primarily Adult Cast/Urban Fantasy/Gore/Shapeshifting/Guns/Super Power/Swordplay/Ojou-sama/Henshin/Tokusatsu/Work/Slapstick/Heterosexual/Tsundere\nThe second season of <i>Kaijuu 8-gou</i>. <br><br>\n\nKafka must face new challenges, new Kaiju, and… a new Captain?! <br><br>\n\n(Source: KAIJU NO. 8 EN Twitter)"
+      "description": "Genres: Action, Sci-Fi\nTags:Kaiju/Monster Boy/Male Protagonist/Shounen/Shapeshifting/Military/Primarily Adult Cast/Urban Fantasy/Guns/Gore/Super Power/Swordplay/Work/Ojou-sama/Henshin/Tokusatsu/Slapstick/Heterosexual/Tsundere\nThe second season of <i>Kaijuu 8-gou</i>. <br><br>\n\nKafka must face new challenges, new Kaiju, and… a new Captain?! <br><br>\n\n(Source: KAIJU NO. 8 EN Twitter)"
     },
     {
       "id": "tt36592690",
       "type": "series",
       "name": "The Fragrant Flower Blooms With Dignity",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181444-vmtWANHhtVaB.jpg",
-      "description": "Genres: Comedy, Drama, Romance\nTags:Heterosexual/Primarily Teen Cast/School/Urban/Shounen/Food/Male Protagonist/Female Protagonist/Ensemble Cast/Iyashikei/Delinquents\nChidori High is a boys’ school that takes in the dregs of society with the lowest grades. Next door stands Kikyo Girls’ High, where the wealthy, high-class families send their precious daughters. Chidori second-year Rintaro, who has a fierce face but a gentle heart, is helping at his family’s patisserie when he meets a girl named Kaoruko. The two hit it off right away…but this blissful peace is quickly disturbed when Rintaro discovers that Kaoruko is actually a student at Kikyo. Worse, she doesn’t seem to realize what a huge problem this really is! Will these two be able to forge a path for themselves, and sidestep the traps (metaphorical and literal) laid by their classmates?\n<br><br>\n(Source: Kodansha USA)"
+      "description": "Genres: Comedy, Drama, Romance\nTags:Heterosexual/Primarily Teen Cast/Urban/School/Shounen/Food/Male Protagonist/Female Protagonist/Ensemble Cast/Iyashikei/Delinquents\nChidori High is a boys’ school that takes in the dregs of society with the lowest grades. Next door stands Kikyo Girls’ High, where the wealthy, high-class families send their precious daughters. Chidori second-year Rintaro, who has a fierce face but a gentle heart, is helping at his family’s patisserie when he meets a girl named Kaoruko. The two hit it off right away…but this blissful peace is quickly disturbed when Rintaro discovers that Kaoruko is actually a student at Kikyo. Worse, she doesn’t seem to realize what a huge problem this really is! Will these two be able to forge a path for themselves, and sidestep the traps (metaphorical and literal) laid by their classmates?\n<br><br>\n(Source: Kodansha USA)"
     },
     {
       "id": "tt32612521",
@@ -47,14 +47,7 @@
       "type": "series",
       "name": "SAKAMOTO DAYS Part 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184237-OJAksU2fsIPx.jpg",
-      "description": "Genres: Action, Comedy\nTags:Shounen/Assassins/Crime/Guns/Found Family/Konbini/Criminal Organization/Male Protagonist/Yakuza/Gangs/Super Power/Primarily Adult Cast/Family Life/Urban/Gore\nThe second part of <i>SAKAMOTO DAYS</i>."
-    },
-    {
-      "id": "tt9529546",
-      "type": "series",
-      "name": "The Rising of the Shield Hero Season 4",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173780-O7v1YfXg61JT.png",
-      "description": "Genres: Action, Adventure, Fantasy\nTags:Anti-Hero/Medieval/Magic/Isekai/Male Protagonist/Dragons\nThe fourth season of <i>Tate no Yuusha no Nariagari</i>.<br><br>\n\nNaofumi journeys to a politically unstable nation where Raphtalia has been labeled a threat.<br><br>\n\n(Source: Crunchyroll News)"
+      "description": "Genres: Action, Comedy\nTags:Shounen/Assassins/Guns/Crime/Criminal Organization/Found Family/Konbini/Male Protagonist/Yakuza/Gangs/Super Power/Urban/Primarily Adult Cast/Family Life/Gore\nThe second part of <i>SAKAMOTO DAYS</i>."
     },
     {
       "id": "tt33028568",
@@ -62,6 +55,13 @@
       "name": "The Summer Hikaru Died",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177689-d0mB5nYgdnhi.jpg",
       "description": "Genres: Horror, Mystery, Psychological, Supernatural, Thriller\nTags:Cosmic Horror/Rural/Male Protagonist/Monster Boy/Primarily Teen Cast/Seinen/Unrequited Love/LGBTQ+ Themes/Urban Fantasy\nTwo best friends living in a rural Japanese village: Yoshiki and Hikaru. Growing up together, they were inseparable… until the day Hikaru came back from the mountains, and was no longer himself. “Something” has taken over Hikaru’s body, memories, feelings… and everything they know begins to unravel.<br>\n<br>\n(Source: Netflix)"
+    },
+    {
+      "id": "tt9529546",
+      "type": "series",
+      "name": "The Rising of the Shield Hero Season 4",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173780-O7v1YfXg61JT.png",
+      "description": "Genres: Action, Adventure, Fantasy\nTags:Anti-Hero/Medieval/Magic/Isekai/Male Protagonist/Dragons\nThe fourth season of <i>Tate no Yuusha no Nariagari</i>.<br><br>\n\nNaofumi journeys to a politically unstable nation where Raphtalia has been labeled a threat.<br><br>\n\n(Source: Crunchyroll News)"
     },
     {
       "id": "tt33060122",
@@ -131,7 +131,7 @@
       "type": "series",
       "name": "There's No Freaking Way I'll Be Your Lover! Unless...",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184591-jRXZ29bN61Zc.jpg",
-      "description": "Genres: Comedy, Romance\nTags:Female Protagonist/Primarily Female Cast/School/Yuri/LGBTQ+ Themes/Female Harem\nRenako Amaori is leaving her awkward and lonely junior high school life behind, determined to become a normal girl with normal friends in high school. Glamorous, confident Mai Ouzuka is Renako’s total opposite: wealthy, outgoing, and a literal fashion model. Against the odds, the two girls form an immediate connection. Renako thinks she may have found the best friend of her dreams…until Mai’s romantic confession sends her into a tailspin. Renako wants to prove to Mai that being BFFs is better than being girlfriends, but Mai is dead set on convincing Renako that they’re destined to be lovers. Let the love games begin!<br><br>\n\n(Source: Seven Seas Entertainment)"
+      "description": "Genres: Comedy, Romance\nTags:Female Protagonist/Primarily Female Cast/Yuri/LGBTQ+ Themes/Female Harem/School\nRenako Amaori is leaving her awkward and lonely junior high school life behind, determined to become a normal girl with normal friends in high school. Glamorous, confident Mai Ouzuka is Renako’s total opposite: wealthy, outgoing, and a literal fashion model. Against the odds, the two girls form an immediate connection. Renako thinks she may have found the best friend of her dreams…until Mai’s romantic confession sends her into a tailspin. Renako wants to prove to Mai that being BFFs is better than being girlfriends, but Mai is dead set on convincing Renako that they’re destined to be lovers. Let the love games begin!<br><br>\n\n(Source: Seven Seas Entertainment)"
     },
     {
       "id": "tt14400866",
@@ -267,18 +267,18 @@
       "description": "Genres: Drama, Romance\nTags:Josei/Female Protagonist/Royal Affairs\nMarie, the second daughter of a poor baron’s household, is treated like a servant by her parents. Even at Marie’s birthday party, her beautiful elder sister, Anastasia, is the star. Outside, Marie bumps into Count Kyuros Granado, who falls for her at first sight. Yet, due to a misunderstanding, the Count proposes to Anastasia. After a tragic accident, Marie must marry the count instead!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt35652489",
-      "type": "series",
-      "name": "Cultural Exchange with a Game Centre Girl",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180794-rQGxkguEc2ov.png",
-      "description": "Genres: Comedy, Romance\nTags:Heterosexual/Otaku Culture/Video Games\nKusakabe Renji, a young man working at a game centre, sees an English girl named Lily Baker playing a crane game on Valentine’s Day. Seeing her fail repeatedly to win a prize, Renji can’t help but take action. The day after Lily finally gets her plushie, Renji receives an unexpected message from her that reads, “Be my valentine!” What started as a misunderstanding leads to cultural exchange!\n<br><br>\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt31435652",
       "type": "series",
       "name": "Nyaight of the Living Cat",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175124-eDYbn0W5F4to.jpg",
       "description": "Genres: Horror\nTags:Pandemic/Post-Apocalyptic\nIn the near future, a unique disease has swept across the planet: a virus that transforms humans into cats! And the horde is expanding, since if these adorable kitties snuggle with a human, the human is transformed into yet another cat. A small group of cat-loving survivors is trying to escape the madness, but how can you defend yourself against a threat you just want to cuddle and pet?! This wild new take on a post-apocalyptic survival tale will make you roll over and purr with delight!\n<br><br>\n(Source: Seven Seas Entertainment)"
+    },
+    {
+      "id": "tt35652489",
+      "type": "series",
+      "name": "Cultural Exchange with a Game Centre Girl",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180794-rQGxkguEc2ov.png",
+      "description": "Genres: Comedy, Romance\nTags:Heterosexual/Otaku Culture/Video Games\nKusakabe Renji, a young man working at a game centre, sees an English girl named Lily Baker playing a crane game on Valentine’s Day. Seeing her fail repeatedly to win a prize, Renji can’t help but take action. The day after Lily finally gets her plushie, Renji receives an unexpected message from her that reads, “Be my valentine!” What started as a misunderstanding leads to cultural exchange!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt36988220",
